--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,15 @@
   <link rel="stylesheet" href="app.css">
 </head>
 <body>
-<app>
-  Loading...
-</app>
+<div class="container">
+  <div class="row" style="margin-top: 20px;">
+    <div class="col-xs-12">
+      <app>
+        Loading...
+      </app>
+    </div>
+  </div>
+</div>
 <script type="text/javascript" src="vendor.bundle.js"></script>
 <script type="text/javascript" src="app.bundle.js"></script>
 </body>
