--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="app.css">
 </head>
 <body>
-<div class="container">
+<div class="container-fluid">
   <div class="row" style="margin-top: 20px;">
     <div class="col-xs-12">
       <app>
